Changed warning messages and welcome message, optimized checks. Added check if number is happy or sad, added excluding of numbers with some property by adding minus to the name of the property.